# jsode

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  TODOs.md  ascii.properties  rustfmt.toml
examples/: deserialize_into_struct.rs
jsode_macro/: Cargo.toml
jsode_macro/src/: common.rs  derive.rs  lib.rs
json_parser_macro/: Cargo.toml
json_parser_macro/src/: common.rs  derive.rs  lib.rs
resources/valid/: sample1.json  sample2.json  sample5.json5  sample6.json5  sample7.json5
src/: common.rs  constant.rs  core.rs  deserialize.rs  error.rs  indexer.rs  lexer.rs  lib.rs  main.rs  parser.rs
tests/: ascii.rs  double_pointer.rs  individual_value.rs  invalid_json_test.rs  json_deserialize.rs  json_test.rs  number.rs  valid_json_test.rs
