workspace = { members = ["jsode_macro"] }

[package]
name = "jsode"
version = "0.1.2"
edition = "2021"
description = "Simple, zero-copy(parisng) & zero-dependency JSON Parser"
license = "MIT"
repository = "https://github.com/taminhtienhai/jsode"
documentation = "https://docs.rs/jsode/0.1.2"

[lints.clippy]
never_loop = "allow"

[dependencies]
jsode_macro = { version = "0.1" }

[features]
default = ["macro"]
macro = []
unstable = [] # introduce memory leak at the moment