workspace = { members = ["jsode_macro"] }

[package]
name = "jsode"
version = "0.1.3"
edition = "2021"
description = "Simple, zero-copy & zero-dependency JSON Parser"
license = "MIT"
repository = "https://github.com/taminhtienhai/jsode"
documentation = "https://docs.rs/jsode/0.1.3"
keywords = ["json", "parser", "zero-copy"]
categories = ["parser-implementations", "parsing"]

[lints.clippy]
never_loop = "allow"

[dependencies]
jsode_macro = { version = "0.1" }

[features]
default = ["macro"]
macro = []
unstable = [] # introduce memory leak at the moment